<resources>
    <string name="app_name">WeatherApp</string>
    <string name="example_city">Example City</string>
    <string name="example_temp">16*C</string>
    <string name="mintemp_example">-1*C</string>
    <string name="maxtemp_example">22*C</string>
    <string name="date_example">16th Nov 8pm</string>
    <string name="feelstemp_example">Feels like 10*C</string>
    <string name="weather_desc_example">light rain</string>
    <string name="weather_icon">weather_icon</string>
    <string name="enter_city">Enter City</string>
    <string name="get_forecast">Get Forecast</string>
    <string name="low">Low</string>
    <string name="high">High</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="date">Date</string>
    <string name="humidity">Humidity(%)</string>
    <string name="wind_speed">Wind Speed(mph)</string>
    <string name="description">Description</string>
    <string name="pressure">Pressure</string>
</resources>